--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -18,13 +18,40 @@ header {
     margin: auto;
 }
 
-header a {
+.navlink {
     color: rgb(230, 230, 230);
     text-decoration: none;
     font-weight: bold;
 }
 
-header a:hover {
+.navlink:hover {
+    transform: scale(1.1);
+}
+
+.dropdown-content {
+    display: none;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: rgb(230, 230, 230);
+    font-size: 11px;
+    padding: 3px 11px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+.dropdown-content a:hover {
+    transform: scale(1.1);
+}
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover {
     transform: scale(1.1);
 }
 
@@ -37,6 +64,9 @@ h1 {
     font-size: 25px;
     text-align: center;
     color: grey;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-position: under;
 }
 
 h2 {
