--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -22,6 +22,7 @@ header {
     color: rgb(230, 230, 230);
     text-decoration: none;
     font-weight: bold;
+    font-variant: small-caps;
 }
 
 .navlink:hover {
@@ -64,6 +65,7 @@ h1 {
     font-size: 25px;
     text-align: center;
     color: grey;
+    font-variant: small-caps;
     text-decoration: underline;
     text-decoration-thickness: 1px;
     text-underline-position: under;
@@ -72,6 +74,33 @@ h1 {
 h2 {
     font-size: 20px;
     color: grey;
+    font-variant: small-caps;
+}
+
+form {
+    width: 250px;
+    height: auto;
+    margin: auto;
+    padding: 10px 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    margin: 10px auto;
+    width: 180px;
+}
+
+.submit {
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+}
+
+label {
+    font-size: 14px;
+    margin-bottom: 10px;
 }
 
 footer {
